Reconfiguration des indices Elasticsearch pour les honeypots